--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -1,4 +1,6 @@
-@import '../node_modules/slick-carousel/slick/{**/*.scss}'
+@import '//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css'
 
 @import 'settings/*'
+@import 'mixins/*'
 @import 'generic/*'
+@import 'blocks/*'
