--- a/src/stylesheets/blocks/button.sass
+++ b/src/stylesheets/blocks/button.sass
@@ -1,6 +1,7 @@
 .button
   @extend %copy
-  background: #42d0ef
+  background-image: url('../images/button.png')
+  background-position: center
   border-radius: 3px
   border: 0
   color: #fff
