--- a/src/stylesheets/blocks/article.sass
+++ b/src/stylesheets/blocks/article.sass
@@ -1,10 +1,11 @@
 .article
   align-items: center
   background-image: url('/images/background.png')
-  background-position: center
+  background-position: bottom
   display: flex
-  min-height: 100vh
-  text-align: center
+  min-height: 100%
+  padding-bottom: 64px
+  box-sizing: border-box
 
   &__header
     padding: 20px 0
