--- a/src/stylesheets/blocks/section.sass
+++ b/src/stylesheets/blocks/section.sass
@@ -10,4 +10,12 @@
       height: 100%
 
   @media all and (max-width: 767px)
-    min-height: 100%
+    min-height: 0
+
+    .slick-track
+      display: flex
+      height: auto
+
+    .slick-slide
+      float: none
+      height: auto
