--- a/src/stylesheets/generic/page.sass
+++ b/src/stylesheets/generic/page.sass
@@ -12,7 +12,8 @@
     width: 500px
 
   @media all and (max-width: 767px)
-    flex-direction: column
+    min-height: 0
+    display: block
 
     .carousel, .section
       width: 100%
