--- a/src/stylesheets/application.sass
+++ b/src/stylesheets/application.sass
@@ -1,6 +1,7 @@
 @import '//cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css'
 
 @import 'settings/*'
+@import 'vendor/*'
 @import 'mixins/*'
 @import 'generic/*'
 @import 'blocks/*'
