--- a/src/stylesheets/blocks/carousel.sass
+++ b/src/stylesheets/blocks/carousel.sass
@@ -6,13 +6,13 @@
     &-slide
       position: relative
 
-      img
-        position: absolute
-        top: 0
-        left: 0
-        height: 100%
-        width: 100%
-        object-fit: cover
+  &__image
+    position: absolute
+    top: 0
+    left: 0
+    height: 100%
+    width: 100%
+    object-fit: cover
 
   @media all and (max-width: 767px)
     .slick
